--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -7,7 +7,7 @@
 @import 'common/global';
 @import 'common/typography';
 
-@import 'utils/u-space';
+@import 'utils/utils';
 
 @import 'components/banner';
 @import 'components/header';
