--- a/src/ui/component/Learning.html
+++ b/src/ui/component/Learning.html
@@ -1,49 +1,56 @@
-<div class="resource__item">
-    <div class="resource__main">
-        {{#if course.getType() === 'link'}}
-            <a href="/courses/{{course.id}}" class="resource__title" target="_blank">
-                {{course.title}}
-            </a>
-        {{else}}
-            <a href="/courses/{{course.id}}">
-                {{course.title}}
-            </a>
-        {{/if}}
-        <span class="resource__action">
-            {{#if course.record}}
-                {{#if course.record.modules && course.record.modules.length && course.record.modules[0].eventId}}
-                    <a href="/book/{{course.id}}/{{course.record.modules[0].moduleId}}/{{course.record.modules[0].eventId}}/cancel">Cancel</a>
-                {{else}}
-                    {{#if course.getType() !== 'blended' && course.getType() !== 'face-to-face'}}
-                        <a href="/courses/{{course.id}}/{{course.modules[0].id}}">Resume</a>
-                    {{/if}}
-                    {{#if !course.isRequired(signedInUser)}}
-                        <a href="/courses/{{course.id}}/delete">Delete</a>
+<div class="resource">
+    <ul class="resource__item u-clearfix">
+        <li class="resource__main">
+            {{#if course.getType() === 'link'}}
+                <a href="/courses/{{course.id}}" class="resource__title" target="_blank">
+                    {{course.title}}
+                </a>
+            {{else}}
+                <a href="/courses/{{course.id}}">
+                    {{course.title}}
+                </a>
+            {{/if}}
+            <span class="resource__action">
+                {{#if course.record}}
+                    {{#if course.record.modules && course.record.modules.length && course.record.modules[0].eventId}}
+                        <a href="/book/{{course.id}}/{{course.record.modules[0].moduleId}}/{{course.record.modules[0].eventId}}/cancel">Cancel</a>
+                    {{else}}
+                        {{#if course.getType() !== 'blended' && course.getType() !== 'face-to-face'}}
+                            <a href="/courses/{{course.id}}/{{course.modules[0].id}}">Resume</a>
+                        {{/if}}
+                        {{#if !course.isRequired(signedInUser)}}
+                            <a href="/courses/{{course.id}}/delete">Delete</a>
+                        {{/if}}
                     {{/if}}
                 {{/if}}
+            </span>
+        </li>
+        <li class="resource__info">
+            <span>
+            {{course.getType() === 'blended' ? '' : i18n(course.getType()) + (course.duration ? '<br>' : '')}}
+            {{course.getDuration()}}
+            {{#if course.price}}
+                <br>&pound;{{course.price}}
             {{/if}}
-        </span>
-    </div>
-    <div class="resource__info">
-        <span>
+            </span>
+        </li>
+        <li class="resource__info">
             {{#if course.nextRequiredBy(signedInUser)}}
-                Due by {{formatDate(course.nextRequiredBy(signedInUser))}}
+                <span class="meta u-display-b">Due by:</span>
+                <span class="u-display-b">{{formatDate(course.nextRequiredBy(signedInUser))}}</span>
+            {{else}}
+                <span>
+                    &nbsp;
+                </span>
             {{/if}}
-        </span>
-
-    </div>
-    <div class="resource__duration">
-        <span>
-        {{course.getType() === 'blended' ? '' : i18n(course.getType()) + (course.duration ? ', ' : '')}}
-        {{course.getDuration()}}
-        </span>
-    </div>
-    <div class="resource__status">
-        {{#if course.record && course.record.state }}
-        <span class="badge badge--info badge--smaller">{{i18n(course.record.state)}}</span>
-        {{/if}}
-        {{#if course.getSelectedDate()}}
-        <span class="meta">{{formatDate(course.getSelectedDate())}}</span>
-        {{/if}}
-    </div>
+        </li>
+        <li class="resource__status">
+            {{#if course.record && course.record.state }}
+            <span class="badge badge--info badge--smaller">{{i18n(course.record.state)}}</span>
+            {{/if}}
+            {{#if course.getSelectedDate()}}
+            <span class="meta">{{formatDate(course.getSelectedDate())}}</span>
+            {{/if}}
+        </li>
+    </ul>
 </div>
