--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'utils/utils';
 
 @import 'components/banner';
+@import 'components/bar-rating';
 @import 'components/header';
 @import 'components/footer';
 @import 'components/home';
