Open survey in a new tab

--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -23,6 +23,6 @@
     <p>
         <strong class="phase-tag">BETA</strong>
         <span>This is a new service – your
-            <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/QNJEE/">feedback</a>&nbsp;will help us to improve it.</span>
+            <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/QNJEE/" target="_blank">feedback</a>&nbsp;will help us to improve it.</span>
     </p>
 </div>
