Switching to discite component for modules.

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -11,6 +11,7 @@
 
 @import 'components/banner';
 @import 'components/bar-rating';
+@import 'components/discite';
 @import 'components/header';
 @import 'components/footer';
 @import 'components/home';
