accessibility tabs front end

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -31,7 +31,7 @@
 @import 'components/home-tile';
 @import 'components/tables';
 @import 'components/accessible-auto-complete';
-@import 'components/pagination';
+@import 'components/tabs';
 
 .phase-banner {
 	@extend %site-width-container;
