--- a/src/ui/assets/styles/components/_booking.scss
+++ b/src/ui/assets/styles/components/_booking.scss
@@ -83,8 +83,32 @@
 	@include e(key) {
 		display: inline-block;
 		width: 50%;
+		float: left;
+
 		@include media($tablet-breakpoint) {
 			width: 25%;
+			float: none;
+		}
+		@include m(centre) {
+			@include media($tablet-breakpoint) {
+				top: 50%;
+				position: absolute;
+			}
+		}
+	}
+	@include e(value) {
+		@extend .bold-small;
+		width: 50%;
+		display: inline-block;
+		@include m(li) {
+			width: 100%;
+		}
+	}
+	@include e(values) {
+		display: inline-block;
+		width: 50%;
+		@include media($tablet-breakpoint) {
+			width: 70%;
 		}
 	}
 }
