--- a/src/ui/component/BookingTabContent.html
+++ b/src/ui/component/BookingTabContent.html
@@ -74,9 +74,10 @@
         {{elseif tab === 'accessibility'}}
             <p>All our venues are wheelchair accessible</p>
             <strong>If you have additional accessibility requirements, you can specify these below. Someone from our helpdesk may contact you to confirm your requirements.</strong>
-            <AccessibilityOptions :accessibility/>
-
         {{/if}}
 
+        <AccessibilityOptions :accessibilityReqs class="{{tab === 'accessibility' ? '' : 'visually-hidden'}}"/>
+
 	</div>
+
 </div>
