when only 1 need selected

--- a/src/ui/component/BookingTabContent.html
+++ b/src/ui/component/BookingTabContent.html
@@ -1,9 +1,9 @@
 <div class="js-tabs nav-tabs">
     <ul>
-        <li class="{{tab === 'before-you-book' ? 'active' : ''}}"><button class="booking__tab" type="submit" formaction="{{url}}/save?tab=before-you-book">Before you book</button></li>
-        <li class="{{tab === 'terms-and-conditions' ? 'active' : ''}}"><button class="booking__tab" type="submit" formaction="{{url}}/save?tab=terms-and-conditions">Terms and Conditions</button></li>
-        <li class="{{tab === 'refund-policy' ? 'active' : ''}}"><button class="booking__tab" type="submit" formaction="{{url}}/save?tab=refund-policy">Refund policy</button></li>
-        <li class="{{tab === 'accessibility' ? 'active' : ''}}"><button class="booking__tab" type="submit" formaction="{{url}}/save?tab=accessibility">Accessibility</button></li>
+        <li class="{{tab === 'before-you-book' ? 'active' : ''}}"><button class="tab" type="submit" formaction="{{url}}/save?tab=before-you-book">Before you book</button></li>
+        <li class="{{tab === 'terms-and-conditions' ? 'active' : ''}}"><button class="tab" type="submit" formaction="{{url}}/save?tab=terms-and-conditions">Terms and Conditions</button></li>
+        <li class="{{tab === 'refund-policy' ? 'active' : ''}}"><button class="tab" type="submit" formaction="{{url}}/save?tab=refund-policy">Refund policy</button></li>
+        <li class="{{tab === 'accessibility' ? 'active' : ''}}"><button class="tab" type="submit" formaction="{{url}}/save?tab=accessibility">Accessibility</button></li>
     </ul>
 </div>
 <div class="js-tab-content tab-content u-space-b30">
