list spacing for cancel booking

--- a/src/ui/assets/styles/common/_typography.scss
+++ b/src/ui/assets/styles/common/_typography.scss
@@ -48,3 +48,13 @@
 	display: block;
 	color: $grey-1;
 }
+
+%p {
+	margin-top: em(5, 16);
+	margin-bottom: em(20, 16);
+
+	@include media(tablet) {
+		margin-top: em(5);
+		margin-bottom: em(20);
+	}
+}
