Duration and price moved to modules.

--- a/src/ui/component/DisciteModule.html
+++ b/src/ui/component/DisciteModule.html
@@ -10,7 +10,7 @@
                 <span class="visuallyhidden">Type:</span> {{i18n(module.type)}}
             </li>
             <li class="discite__property-item">
-                <span class="visuallyhidden">Duration:</span> {{module.getDuration()}}
+                <span class="visuallyhidden">Duration:</span> {{module.duration}}
             </li>
         </ul>
         <div class="discite__status"><span class="badge badge--info ">{{module.state ? i18n(module.state) : ''}}</span></div>
