inital functionality + bugs
utility commit

add/edit new modules

utility commit

elearning upload

utility commit

utility commit

add/edit new modules

utility commit

elearning upload

utility commit

utility commit

base functionality stored

rebase changes

fixes

utility commit

utility commit

bugfixes

--- a/src/management-ui/assets/styles/common/_utils.scss
+++ b/src/management-ui/assets/styles/common/_utils.scss
@@ -1,3 +1,21 @@
 /*
 * Mixins, includes.. cool .scss stuff :)
 */
+
+/*
+* Mixins, includes.. cool .scss stuff :)
+*/
+
+//element selector
+@mixin e($element) {
+	&__#{$element} {
+		@content;
+	}
+}
+
+//modifier selector
+@mixin m($modifier) {
+	&--#{$modifier} {
+		@content;
+	}
+}
