Management UI for multimodule courses

--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -21,12 +21,12 @@
             {{/if}}
         </ul>
         {{#if course.record && course.record.state }}
-            <div class="discite__status">
-                <span class="badge badge--info">{{i18n(course.record.state)}}</span>
-                {{#if course.getSelectedDate()}}
-                <span class="meta">{{formatDate(course.getSelectedDate())}}</span>
-                {{/if}}
-            </div>
+        <div class="discite__status">
+            <span class="badge badge--info">{{i18n(course.record.state)}}</span>
+            {{#if course.getSelectedDate()}}
+            <span class="meta">{{datetime.formatDate(course.getSelectedDate())}}</span>
+            {{/if}}
+        </div>
         {{/if}}
     </div>
     {{#if course.shortDescription}}
@@ -35,43 +35,40 @@
     </div>
     {{/if}}
     <div class="discite__area">
-        {{#if course.nextRequiredBy(signedInUser)}}
-            Due by: {{formatDate(course.nextRequiredBy(signedInUser))}}
-        {{elseif course.getAreasOfWork().length}}
-            Work area: {{course.getAreasOfWork().map(function(aow) { return i18n('areas-of-work')[aow]; }).join(', ')}}
-        {{/if}}
+        {{#if course.nextRequiredBy(signedInUser)}} Due by: {{datetime.formatDate(course.nextRequiredBy(signedInUser))}} {{elseif
+        course.getAreasOfWork().length}} Work area: {{course.getAreasOfWork().map(function(aow) { return i18n('areas-of-work')[aow];
+        }).join(', ')}} {{/if}}
     </div>
     <div class="discite__action discite__action--{{modifier || ''}}">
-        {{#if course.getType() !== 'blended'}}
-            {{#if course.record}}
-                {{#if course.record.modules && course.record.modules.length && course.record.modules[0].eventId}}
-                    <a href="/book/{{course.id}}/{{course.record.modules[0].moduleId}}/{{course.record.modules[0].eventId}}/cancel">Cancel</a>
-                {{else}}
-                    {{#if course.getType() !== 'face-to-face'}}
-                        {{#if course.record.modules.length}}
-                            <a href="/courses/{{course.id}}/{{course.record.modules[0].moduleId}}">{{ i18n('action_' + (course.record.modules[0].state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
-                        {{else}}
-                            <a href="/courses/{{course.id}}/{{course.modules[0].id}}">{{ i18n('action_NOT_STARTED') }} <span class="visuallyhidden"> this module</span></a>
-                        {{/if}}
-                    {{/if}}
-                    {{#if !course.isRequired(signedInUser)}}
-                        <a href="/courses/{{course.id}}/delete">Remove <span class="visuallyhidden"> this module</span></a>
-                    {{/if}}
-                {{/if}}
-            {{else}}
-                {{#if course.getType() !== 'face-to-face'}}
-                    <a href="/courses/{{course.id}}/{{course.modules[0].id}}">Start <span class="visuallyhidden"> this module</span></a>
-                {{else}}
-                    <a href="/book/{{course.id}}/{{course.modules[0].id}}/choose-date">Book <span class="visuallyhidden"> this module</span></a>
-                {{/if}}
-                {{#if !course.isRequired(signedInUser)}}
-                    <a href="/suggestions-for-you/add/{{course.id}}?ref={{modifier}}">Add to learning plan</a>
-                {{/if}}
-            {{/if}}
+        {{#if course.getType() !== 'blended'}} {{#if course.record}} {{#if course.record.modules && course.record.modules.length
+        && course.record.modules[0].eventId}}
+        <a href="/book/{{course.id}}/{{course.record.modules[0].moduleId}}/{{course.record.modules[0].eventId}}/cancel">Cancel</a>
+        {{else}} {{#if course.getType() !== 'face-to-face'}} {{#if course.record.modules.length}}
+        <a href="/courses/{{course.id}}/{{course.record.modules[0].moduleId}}">{{ i18n('action_' + (course.record.modules[0].state || 'NOT_STARTED' )) }}
+            <span class="visuallyhidden"> this module</span>
+        </a>
         {{else}}
-            {{#if !course.isRequired(signedInUser)}}
-                <a href="/courses/{{course.id}}/delete">Remove <span class="visuallyhidden"> this module</span></a>
-            {{/if}}
-        {{/if}}
+        <a href="/courses/{{course.id}}/{{course.modules[0].id}}">{{ i18n('action_NOT_STARTED') }}
+            <span class="visuallyhidden"> this module</span>
+        </a>
+        {{/if}} {{/if}} {{#if !course.isRequired(signedInUser)}}
+        <a href="/courses/{{course.id}}/delete">Remove
+            <span class="visuallyhidden"> this module</span>
+        </a>
+        {{/if}} {{/if}} {{else}} {{#if course.getType() !== 'face-to-face'}}
+        <a href="/courses/{{course.id}}/{{course.modules[0].id}}">Start
+            <span class="visuallyhidden"> this module</span>
+        </a>
+        {{else}}
+        <a href="/book/{{course.id}}/{{course.modules[0].id}}/choose-date">Book
+            <span class="visuallyhidden"> this module</span>
+        </a>
+        {{/if}} {{#if !course.isRequired(signedInUser)}}
+        <a href="/suggestions-for-you/add/{{course.id}}?ref={{modifier}}">Add to learning plan</a>
+        {{/if}} {{/if}} {{else}} {{#if !course.isRequired(signedInUser)}}
+        <a href="/courses/{{course.id}}/delete">Remove
+            <span class="visuallyhidden"> this module</span>
+        </a>
+        {{/if}} {{/if}}
     </div>
 </div>
