--- a/src/ui/component/LearningRecordTable.html
+++ b/src/ui/component/LearningRecordTable.html
@@ -8,13 +8,15 @@
         </tr>
     </thead>
     <tbody>
-    {{#each courses as course}}
+        {{#each courses as course}}
         <tr>
-            <td><a href="/courses/{{course.id}}">{{course.title}} </a></td>
+            <td>
+                <a href="/courses/{{course.id}}">{{course.title}} </a>
+            </td>
             <td>{{i18n(course.getType())}}</td>
             <td>{{course.getDuration() || '-'}}</td>
-            <td>{{formatDate(course.getCompletionDate(signedInUser))}}</td>
+            <td>{{datetime.formatDate(course.getCompletionDate(signedInUser))}}</td>
         </tr>
-    {{/each}}
+        {{/each}}
     </tbody>
 </table>
