--- a/src/ui/assets/styles/components/_resource.scss
+++ b/src/ui/assets/styles/components/_resource.scss
@@ -3,10 +3,10 @@
 %li {
 	@include box-sizing(border-box);
 	position: relative;
-	display:inline-block;
-	float:left;
+	display: inline-block;
+	float: left;
 	vertical-align: top;
-	padding:10px 8px 10px 0;
+	padding: 10px 8px 10px 0;
 }
 
 .resources {
@@ -17,12 +17,12 @@
 	margin-bottom: 10px;
 	border-bottom: 1px solid $grey-2;
 
-	&__item {
+	@include e(item) {
 		position: relative;
 		text-align: left;
 	}
 
-	&__main {
+	@include e(main) {
 		@extend %li;
 		width: 100%;
 		max-width: auto;
@@ -32,13 +32,13 @@
 		}
 	}
 
-	&__rating {
+	@include e(rating) {
 		@extend %li;
 		min-width: 148px;
 		display: none;
 	}
 
-	&__info {
+	@include e(info) {
 		@extend %li;
 		padding-right: 20px;
 
@@ -47,14 +47,14 @@
 		}
 	}
 
-	&__duration {
+	@include e(duration) {
 		@extend %li;
 	}
 
-	&__status {
+	@include e(status) {
 		@extend %li;
 		position: relative;
-		right:auto;
+		right: auto;
 
 		min-width: 100px;
 		padding-right: 0;
@@ -66,7 +66,7 @@
 		}
 	}
 
-	&__action {
+	@include e(action) {
 		position: relative;
 		display: block;
 		margin-top: 10px;
@@ -81,21 +81,19 @@
 		}
 	}
 
-	&__property {
+	@include e(property) {
 		@extend %li;
 
 		&-item {
 			display: block;
-
 		}
-
 	}
 
 	.meta {
 		margin-top: 4px;
 	}
 
-	&__long {
+	@include e(long) {
 		@extend %li;
 
 		@include media(desktop) {
@@ -103,13 +101,13 @@
 		}
 	}
 
-	&--feedback {
+	@include m(feedback) {
 		background-color: $grey-4;
 		padding-left: 20px;
 		padding-right: 20px;
 	}
 
-	&__leave {
+	@include e(leave) {
 		display: block;
 		padding: 0 0 10px 0;
 		clear: both;
@@ -119,21 +117,21 @@
 			clear: none;
 			width: 220px;
 			text-align: right;
-			padding:10px 8px 10px 0;
+			padding: 10px 8px 10px 0;
 		}
 	}
 
-	&__cancel-feedback {
+	@include e(cancel-feedback) {
 		position: absolute;
-		right:-31px;
+		right: -31px;
 		top: 4px;
 		display: inline-block;
-		margin-left:20px;
+		margin-left: 20px;
 		width: 25px;
 		height: 25px;
 		border: 1px solid $grey-2;
 		background-color: $grey-3;
-		background-image: url("../img/close.png");
+		background-image: url('../img/close.png');
 		background-repeat: no-repeat;
 		background-position: 8px 8px;
 		border-radius: 20px;
@@ -142,29 +140,6 @@
 
 		&:hover {
 			background-color: $white;
-		}
-	}
-}
-
-.resources {
-	.resource:last-of-type {
-		border-bottom: 0;
-	}
-
-	&--modules {
-
-		.resource__main {
-
-			@include media(desktop) {
-				width: 400px;
-			}
-		}
-
-		.resource__action {
-
-			a {
-				@include core-19;
-			}
 		}
 	}
 }
