--- a/src/ui/assets/styles/components/_search-results.scss
+++ b/src/ui/assets/styles/components/_search-results.scss
@@ -1,53 +1,47 @@
 .result {
-  @include box-sizing(border-box);
-  position: relative;
-  margin-bottom: 10px;
-  border-bottom: 1px solid $grey-2;
-  padding-bottom: 10px;
+	@include box-sizing(border-box);
+	position: relative;
+	margin-bottom: 10px;
+	border-bottom: 1px solid $grey-2;
+	padding-bottom: 10px;
 
-  &__main {
+	@include e(main) {
+		@include media(desktop) {
+			padding-right: 200px;
+		}
+	}
 
-    @include media(desktop) {
-      padding-right: 200px;
-    }
-  }
+	@include e(description) {
+		margin-bottom: 5px;
 
-  &__description {
-    margin-bottom: 5px;
+		@include media(desktop) {
+			padding-right: 200px;
+		}
+	}
 
-    @include media(desktop) {
-      padding-right: 200px;
-    }
-  }
+	@include e(info) {
+		position: relative;
+		@include core-16;
+		padding: 10px 0 5px;
 
-  &__info {
-    position:relative;
-    @include core-16;
-    padding: 10px 0 5px;
+		@include media(desktop) {
+			position: absolute;
+			width: 192px;
+			top: 5px;
+			right: 0;
+			text-align: right;
+			padding-top: 0;
+		}
+	}
 
-    @include media(desktop) {
-      position: absolute;
-      width: 192px;
-      top: 5px;
-      right: 0;
-      text-align: right;
-      padding-top: 0;
-    }
-  }
+	@include e(action) {
+		a {
+			@include core-16;
+			display: inline-block;
+		}
 
-  &__action {
-
-    a {
-      @include core-16;
-      display: inline-block;
-    }
-
-    a + a {
-      margin-left: 8px;
-    }
-
-    @include media(desktop) {
-
-    }
-  }
+		a + a {
+			margin-left: 8px;
+		}
+	}
 }
