--- a/src/ui/component/Search.html
+++ b/src/ui/component/Search.html
@@ -7,7 +7,7 @@
             <div class="search-box">
                 <form name="searchLearning" method="get" action="/search">
                     <div class="form-group search-box__group ">
-                        <label class="visuallyhidden">Search all available learning</label>
+                        <label class="visuallyhidden" for="q">Search all available learning</label>
                         <input class="form-control search-box__input" id="q" type="search" name="q" value="" placeholder="Search CSL">
                         <button type="submit" class="search-box__submit">Search</button>
                     </div>
