LPFG-101 typeahead label matching

--- a/src/ui/component/TypeAhead.html
+++ b/src/ui/component/TypeAhead.html
@@ -1,3 +1,4 @@
+<label class="visuallyhidden" for="{{inputName}}">{{label}}</label>
 <select class="form-control type-ahead" id="{{inputName}}" name="{{inputName}}">
     <option value="other">Start typing to search</option>
     {{#each options as option}}
